--- a/presentation/presentation/os2--presentation--presentation.qmd
+++ b/presentation/presentation/os2--presentation--presentation.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,34 +14,40 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
+title: "Программный RAID"
+subtitle: "RAID на основе BtrFS"
 license: CC BY
-date: 1970-01-01
+date: 2026-12-06
 ## Generic options
 lang: ru-RU
+slide-level: 2
 crossref:
   lof-title: Список иллюстраций
   lot-title: Список таблиц
   lol-title: Листинги
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   beamer:
+    include-in-header:
+      text: |
+        \usepackage{fontspec}
+        \setmainfont{Noto Serif}
+        \setsansfont{Noto Sans}
     toc: true
     toc-title: Содержание
     number-sections: true
     colorlinks: false
     toc-depth: 2
-    slide_level: 2
+    slide-level: 2
     aspectratio: 169
     section-titles: true
     theme: metropolis
     themeoptions: progressbar=frametitle,sectionpage=progressbar,numbering=fraction
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-### Html output
+  ### Html output
   revealjs:
     transition: slide
     margin: 0.2
@@ -55,178 +61,60 @@ format:
 
 ## Докладчик
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
-
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
-
-:::
-::: {.column width="30%"}
-
-![](./image/kulyabov.jpg)
-
-:::
-::::::::::::::
+- Гелдиев Ыхлас
+- студент
+- Российский университет дружбы народов им. П. Лумумбы
+- [1032249184@pfur.ru](mailto:1032249184@pfur.ru)
+- <https://geldiyevy.github.io/ru/>
 
 # Вводная часть
 
-## Актуальность
+## Эволюция хранения
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+- Традиционный стек: Слоистая архитектура (Диск -> RAID-контроллер -> LVM -> Файловая система)
+- Смена парадигмы: BtrFS объединяет слои файловой системы и управления томами (Volume Manager).
+- Ключевое отличие: Встроенный программный RAID, который "понимает" структуру данных, в отличие от "слепых" аппаратных контроллеров.
 
-## Объект и предмет исследования
+# RAID на основе BtrFS
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+## Архитектурные особенности
 
-## Цели и задачи
+- Чанки (Chunks): Массив строится не поверх целых дисков, а на основе блоков (обычно 1 ГБ), распределенных по дискам.
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+- Раздельные профили Возможность задавать разный уровень RAID для метаданных (критично) и самих данных (скорость)
 
-## Материалы и методы
+- Геометрия: Поддержка дисков разного объема в одном массиве с полным использованием пространства (в отличие от классического RAID).
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+## Уровни RAID и специфика
 
-# Создание презентации
+- RAID 1 в BtrFS: Это не зеркало дисков, а правило "хранить 2 копии блока на разных устройствах" (даже если дисков 3 или 5)
 
-## Процессор `pandoc`
+- RAID 1с3/1с4: Новые профили (ядро 5.5+) для хранения 3-х и 4-х копий данных для защиты от ошибок чтения (URE) на больших дисках.
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+- RAID 5/6: Формально поддерживаются, но имеют статус "Unstable"(нестабильно) для продакшена.
 
-## Формат `pdf`
+## Преимущества интеграции:
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+- Self-healing (Самовосстановление): Автоматическое обнаружение и исправления "тихих" ошибок (bit rot) за счет контрольных сумм (Checksums)
 
-## Код для формата `pdf`
+- Онлайн-трансформация: Добавление/удаление дисков и смена уровня RAID (например, с 1 на 5) на живой системе без даунтайма
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+- Снэпшоты: Мгновенные и атомарные снимки состояния всего массива благодаря CoW-архитектуре
 
-## Формат `html`
+## Проблемы: Write Hole (Дыра записи)
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+- Суть проблемы: При сбое питания во время записи в RAID 5/6 данные и блок четности могут рассинхронизироваться.
 
-## Код для формата `html`
+- Отличие от Hardware RAID: В программном RAID нет энергонезависимой памяти (NVRAM) или батарейки (BBU) для защиты транзакции.
 
-- Тема задаётся в файле `Makefile`
+- Рекомендации: Использовать BtrFS только в режимах RAID 1, 10 или 1c3; для четности (RAID 5/6) выбирать ZFS или mdadm
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+# Заключение
 
-## Получающиеся форматы
+## Выводы
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+- Тренд: Переход от аппаратных контроллеров к умным файловым системам м глубокой интеграцией.
 
-# Элементы презентации
+- Надежность: BtrFS RAID 1/10 обеспечивает лучшую целостность данных за счет хеширования, чем классический RAID.
 
-## Актуальность
-
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
-
-## Цели и задачи
-
-- Не формулируйте более 1--2 целей исследования
-
-## Материалы и методы
-
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
-
-## Содержание исследования
-
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
-
-## Результаты
-
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
-
-
-## Итоговый слайд
-
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
-
-# Рекомендую
-
-## Принцип 10/20/30
-
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
-
-## Связь слайдов
-
-::: incremental
-
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
-
-:::
-
-## Количество сущностей
-
-::: incremental
-
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
-
-:::
-
-## Общие рекомендации
-
-::: incremental
-
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
-
-:::
-
-## Представление данных
-
-::: incremental
-
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
-
-:::
+- Итог: Мощный инструмент для архитектора ОС, но требующий понимания ограничений (избегать RAID 5/6)
