--- a/presentation/report/os2--presentation--report.qmd
+++ b/presentation/report/os2--presentation--report.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,8 +14,8 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Программный RAID"
+subtitle: "RAID на основе BtrFS"
 license: "CC BY"
 ## Generic options
 lang: ru-RU
@@ -34,7 +34,7 @@ bibliography:
 csl: _resources/csl/gost-r-7-0-5-2008-numeric.csl
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   pdf:
     toc: true
     number-sections: true
@@ -42,22 +42,22 @@ format:
     toc-depth: 2
     lof: true # List of figures
     lot: true # List of tables
-#### Document
+    #### Document
     documentclass: scrreprt
     papersize: a4
     fontsize: 12pt
     linestretch: 1.5
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-#### Biblatex
+    #### Biblatex
     cite-method: biblatex
     biblio-style: gost-numeric
     biblatexoptions:
       - backend=biber
       - langhook=extras
       - autolang=other*
-#### Misc options
+    #### Misc options
     csquotes: true
     indent: true
     header-includes: |
@@ -65,55 +65,122 @@ format:
       \usepackage{float}
       \floatplacement{figure}{H}
       \usepackage[math,RM={Scale=0.94},SS={Scale=0.94},SScon={Scale=0.94},TT={Scale=MatchLowercase,FakeStretch=0.9},DefaultFeatures={Ligatures=Common}]{plex-otf}
-### Docx output format
+  ### Docx output format
   docx:
     toc: true
     number-sections: true
     toc-depth: 2
 ---
 
-# Цель работы
+# Введение: Эволюция подсистемы хранения в ОС.
 
-Здесь приводится формулировка цели лабораторной работы. Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
+В контексте архитектуры операционных систем подсистема хранения данных является одним из критически важных уровней абстракции. Традиционно в Linux архитектура хранения строилась по слоеному принципу:
 
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.  Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+- Физический уровень (диски).
+- Уровень блочного устройства (RAID-контроллер или программный mdadm), обеспечивающий избыточность.
+- Уровень управления томами (LVM), обеспечивающий гибкость.
+- Файловая система (например, Ext4 или XFS), управляющая файлами.
 
-# Задание
+BtrFS (B-tree File System) меняет эту парадигму, объединяя слои файловой системы и управления томами. Это современная копирующая-при-записи (Copy-on-Write, CoW) файловая система, разработанная для обеспечения отказоустойчивости, простоты администрирования и восстановления данных.
 
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
+Главная особенность, на которой мы сегодня сосредоточимся, - это встроенная поддержка мультидисковых конфигураций (RAID). В отличии от классического подхода, где файловая системы "не знает" о физической структуре дисков, BtrFS берет на себя функции RAID-контроллера, что открывает уникальные возможности для архитектуры OC.
 
-# Теоретическое введение
+# Архитектурные особенности RAID в BtrFS
 
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
+Для понимания того, как BrtFS реализует RAID, необходимо рассмотреть понятие чанков (chunks) и профилей.
 
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
+В классическом RAID (например, mdadm) массив создается поверх целых дисков или разделов. Файловая система видит одно большое логическое пространство. В BtrFS абстракция работает иначе:
 
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
+- Всё дисковое пространство делиться на чанки (обычно размером 1 ГБ для данных).
+- RAID реализуется не на уровне всего диска, а на уровне этих чанков.
 
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
+Это позволяет применять разные уровни RAID (профили) для метаданных (информации о файлах) и для самих данных в рамках одной файловой системы.
 
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+Пример: Вы можете настроить систему так, чтобы метаданные (наиболее критическая часть ФС) хранилась на зеркале (RAID 1), а сами файлы - без избыточности (Single) или с чередованием (RAID 0).
 
-# Выполнение лабораторной работы
+Это архитектурное решение дает BtrFS ключевое преимущество перед традиционными RAID - независимость от геометрии дисков. Вы можете объединить в массив диски разного объема (например, 2 ТБ + 4ТБ + 6ТБ) и использовать всё доступное пространство, что практически невозможно или неэффективно в классическом RAID 5/10.
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+# Поддерживаемые уровни RAID и их специфика
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+BtrFS поддерживает несколько профилей, аналогичных стандартным уровням RAID, но с важными архитектурными отличиями.
 
-# Выводы
+## RAID 0 и RAID 1
 
-Здесь кратко описываются итоги проделанной работы.
+RAID 0: Данные чередуются между дисками для скорости. Если один диск выходит из строя, теряется все. Здесь отличий от классики мало.
+
+RAID 1: В BtrFS это не зеркалирование дисков "один в один". По определению BtrFS, RAID 1 означает, что существует ровно две копии каждого блока данных на разных дисках, независимо от того, сколько дисков в массиве (их может быть 3,5 или 10).
+
+Нюанс: Если у вас массив из трех дисков в BtrFS RAID 1, данные будут разбросаны парами по всем трём дискам. Выход из строя одного диска безопасен, но выход двух может привести к потере данных.
+
+## RAID 1c3 и RAID 1c4 (Новые возможности)
+
+С версии ядра Linux 5.5 появились профили RAID 1c3 и RAID 1c4. Они обеспечивают хранение 3 и 4 копий данных соответственно. Это ответ на современные требования надежности, так как при огромных объемах дисков вероятность ошибки чтения при восстановлении массива (URE) возрастает.
+
+## RAID 10
+
+Комбинация чередования и зеркалирования. В BtrFS работает очень эффективно и считается «золотым стандартом» для производительности и надежности в этой файловой системе. Требует минимум 4 диска (или 2, если использовать смешанный режим, но это не рекомендуется).
+
+## RAID 5 и RAID 6
+
+BtrFS поддерживает RAID с четностью (аналог RAID 5 и 6), однако в архитектурном сообществе этот режим до сих пор имеет статус «нестабильного» или «экспериментального» для продуктивного использования из-за проблемы «Write Hole», о которой я скажу в разделе недостатков.
+
+# Ключевые преимущества интеграции RAID в ФС
+
+Почему архитекторы систем выбирают BtrFS RAID вместо аппаратного контроллера?
+
+1. Контрольная сумма и самовосстановление (Self-healing)
+
+Это главное преимущество ("Killer Feature").
+
+В обычном RAID, если диск вернет «битый» сектор без сообщения об ошибке (silent data corruption), контроллер может скопировать эту ошибку на зеркало, уничтожив данные.
+BtrFS хранит контрольные суммы (checksums) для каждого блока данных. При чтении система:
+
+- Считает сумму прочитанного блока.
+- Сравнивает с сохраненной.
+
+Если суммы не сошлись, BtrFS автоматически обращается к зеркальной копии на другом диске, отдает пользователю верные данные и фоново перезаписывает битый блок на проблемном диске правильными данными.
+Традиционный RAID этого делать не умеет.
+
+2. Онлайн-изменение конфигурации
+
+Вы можете добавлять и удалять диски из работающей системы «на лету» командой btrfs device add/remove. После добавления диска запускается процесс балансировки (balance), который перераспределяет чанки данных на новый носитель. Это позволяет мигрировать, например, с RAID 1 на RAID 5 без остановки сервисов.
+
+3. Снэпшоты (Snapshots)
+
+Благодаря CoW-природе, создание снимков состояния системы происходит мгновенно и почти не занимает места. В архитектуре BtrFS RAID снэпшоты работают атомарно для всего массива, что упрощает резервное копирование.
+
+# Проблемы и ограничения (RAID 5/6 Write Hole)
+
+Главная проблема архитектуры BtrFS на данный момент — реализация RAID 5 и RAID 6.
+
+Существует феномен, известный как «Write Hole» (Дыра записи). Он возникает при внезапном отключении питания во время записи. В RAID с четностью (5/6) необходимо записать данные и обновить блок четности. Если питание пропадает между этими операциями, четность перестает соответствовать данным.
+
+Традиционные RAID-контроллеры решают это с помощью батарейки (BBU) и NVRAM.
+
+BtrFS, будучи программным решением, пытается решить это через журнал (log), но текущая реализация считается незавершенной. В случае сбоя питания на RAID 5/6 в BtrFS высок риск разрушения файловой системы.
+
+Поэтому в профессиональной среде рекомендация однозначна: для BtrFS использовать RAID 1, 10 или 1c3. Для RAID 5/6 лучше использовать уровень ниже (dm-raid/mdadm) или ZFS.
+
+# Заключение:
+
+Подводя итог, можно сказать, что реализация RAID в BtrFS представляет собой современный подход к архитектуре хранения данных в операционных системах Linux.
+
+# Выводы:
+
+Интеграция уровней: Объединение менеджера томов и файловой системы позволяет достичь высокой гибкости и реализовать функции самовосстановления данных, недоступные аппаратному RAID.
+
+Надежность: Механизм контрольных сумм делает BtrFS RAID 1/10 одним из самых надежных способов хранения данных, защищая от «тихого» повреждения битов.
+
+Ограничения: Следует избегать использования встроенных режимов RAID 5/6 в критически важных системах до окончательного устранения проблемы Write Hole.
+
+BtrFS демонстрирует, как эволюционирует архитектура ОС: от жесткого разделения ответственности между устройствами и ПО к интеллектуальным, интегрированным системам управления данными.
 
 # Список литературы{.unnumbered}
 
-::: {#refs}
-:::
+Btrfs Documentation (kernel.org) - официальная документация по архитектуре и статусу функций.
+
+Ars Technica: A ZFS developer's analysis of the good and bad in Btrfs - Сравнительный анализ архитектурных решений.
+
+Debian Wiki: Btrfs - Практические аспекты внедрения и стабильности профилей RAID.
+
+Btrfs vs. mdadm (Storage Stack comparison) - Технические статьи и сообщества OpenNET и Linux.org.ru
