--- a/labs/lab15/presentation/os2--lab15--presentation.qmd
+++ b/labs/lab15/presentation/os2--lab15--presentation.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -20,28 +20,34 @@ license: CC BY
 date: 1970-01-01
 ## Generic options
 lang: ru-RU
+slide-level: 2
 crossref:
   lof-title: Список иллюстраций
   lot-title: Список таблиц
   lol-title: Листинги
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   beamer:
+    include-in-header:
+      text: |
+        \usepackage{fontspec}
+        \setmainfont{Noto Serif}
+        \setsansfont{Noto Sans}
     toc: true
     toc-title: Содержание
     number-sections: true
     colorlinks: false
     toc-depth: 2
-    slide_level: 2
+    slide-level: 2
     aspectratio: 169
     section-titles: true
     theme: metropolis
     themeoptions: progressbar=frametitle,sectionpage=progressbar,numbering=fraction
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-### Html output
+  ### Html output
   revealjs:
     transition: slide
     margin: 0.2
@@ -55,178 +61,273 @@ format:
 
 ## Докладчик
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
-
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
-
-:::
-::: {.column width="30%"}
-
-![](./image/kulyabov.jpg)
-
-:::
-::::::::::::::
+- Гелдиев Ыхлас
+- студент
+- Российский университет дружбы народов им. П. Лумумбы
+- [1032249184@pfur.ru](mailto:1032249184@pfur.ru)
+- <https://geldiyevy.github.io/ru/>
 
 # Вводная часть
 
-## Актуальность
+## Цель работы
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+Получить навыки управления логическими томами.
 
-## Объект и предмет исследования
+## Задание
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+1. Продемонстрировать навыки создания физических томов на LVM (см. раздел 15.4.1).
+2. Продемонстрировать навыки создания группы томов и логических томов на LVM (см.
+   раздел 15.4.2).
+3. Продемонстрировать навыки изменения размера логических томов на LVM (см. раздел 15.4.3).
+4. Выполнить задание для самостоятельной работы (см. раздел 15.5)
 
-## Цели и задачи
+# Выполнение лабораторной работы
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+# Создание физического тома
 
-## Материалы и методы
+## В терминале с полномочиями администратора в файле /etc/fstab удалите (или закомментируйте) строки автомонтирования /mnt/data и /mnt/data-ext.
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+![1](image/1.png)
 
-# Создание презентации
+## Отмонтируйте /mnt/data и /mnt/data-ext:
 
-## Процессор `pandoc`
+umount /mnt/data
+umount /mnt/data-ext
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+![2](image/2.png)
 
-## Формат `pdf`
+## С помощью команды mount без параметров убедитесь, что диски /dev/sdb и /dev/sdc не подмонтированы.
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+![3](image/3.png)
 
-## Код для формата `pdf`
+## С помощью fdisk сделайте новую разметку для /dev/sdb и /dev/sdc, удалив ранее созданные партиции:
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+- В терминале с полномочиями администратора введите fdisk /dev/sdb.
 
-## Формат `html`
+- Введите p для просмотра текущей разметки дискового пространства. Затем
+  для удаления всех имеющихся партиций на диске достаточно создать новую
+  пустую таблицу DOS-партиции, используя команду o . Убедитесь, что партиции
+  удалены, введя p . Сохраните изменения, введя w .
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+##
 
-## Код для формата `html`
+![4](image/4.png)
 
-- Тема задаётся в файле `Makefile`
+##
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+![5](image/5.png)
 
-## Получающиеся форматы
+## Запишите изменения в таблицу разделов ядра:
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+partprobe /dev/sdb
 
-# Элементы презентации
+![6](image/6.png)
 
-## Актуальность
+## Просмотрите информацию о разделах:
 
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
+cat /proc/partitions
+fdisk --list /dev/sdb
 
-## Цели и задачи
+![7](image/7.png)
 
-- Не формулируйте более 1--2 целей исследования
+## Вместо использования существующих дополнительных дисков можно добавить в VirtualBox к вашей виртуальной машине ещё один диск размером 512 MiB.
 
-## Материалы и методы
+Итак, предположим в вашей виртуальной машине добавлен диск /dev/sdb.
 
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
+## В терминале с полномочиями администратора с помощью fdisk создайте основной раздел с типом LVM:
 
-## Содержание исследования
+- Введите
+  fdisk /dev/sdb
+- Введите n , чтобы создать новый раздел. Выберите p , чтобы сделать его
+  основным разделом, и используйте номер раздела, который предлагается по
+  умолчанию. Если вы используете чистое устройство, это будет номер раздела 1.
+- Нажмите Enter при запросе для первого сектора и введите +100M, чтобы выбрать
+  последний сектор.
+- Вернувшись в приглашение fdisk, введите t , чтобы изменить тип раздела.
+  Поскольку существует только один раздел, fdisk не спрашивает, какой раздел
+  использовать.
+- Программа запрашивает тип раздела, который вы хотите использовать. Выберите
+  8е. Затем нажмите w , чтобы записать изменения на диск и выйти из fdisk.
 
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
+##
 
-## Результаты
+![8](image/8.png)
 
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+## Чтобы обновить таблицу разделов, введите
 
+partprobe /dev/sdb
 
-## Итоговый слайд
+![9](image/9.png)
 
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
+## Теперь, когда раздел был создан, вы должны указать его как физический том LVM. Для этого введите (с учётом наименования дисков в вашей системе):
 
-# Рекомендую
+pvcreate /dev/sdb1
 
-## Принцип 10/20/30
+![10](image/10.png)
 
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
+## Теперь введите pvs, чтобы убедиться, что физический том создан успешно. Обратите внимание, что в этом списке уже существует другой физический том, так как RHEL по умолчанию использует LVM для организации хранилища.
 
-## Связь слайдов
+![11](image/11.png)
 
-::: incremental
+# Создание группы томов и логических томов
 
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
+## В терминале с полномочиями администратора проверьте доступность физических томов в вашей системе:
 
-:::
+pvs
+Вы должны увидеть созданный вами физический том /dev/sdb1.
 
-## Количество сущностей
+![12](image/12.png)
 
-::: incremental
+## Создайте группу томов с присвоенным ей физическим томом:
 
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
+vgcreate vgdata /dev/sdb1
 
-:::
+![13](image/13.png)
 
-## Общие рекомендации
+## Убедитесь, что группа томов была создана успешно:
 
-::: incremental
+vgs
 
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
+Затем введите
+pvs
+Обратите внимание, что теперь эта команда показывает имя физических томов с именами групп томов, которым они назначены.
 
-:::
+![14](image/14.png)
 
-## Представление данных
+## Введите
 
-::: incremental
+lvcreate -n lvdata -l 50%FREE vgdata
+Это создаст логический том LVM с именем lvdata, который будет использовать 50%
+доступного дискового пространства в группе томов vgdata.
 
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
+![15](image/15.png)
 
-:::
+## Для проверки успешного добавления тома введите
+
+lvs
+
+![16](image/16.png)
+
+## На этом этапе вы готовы создать файловую систему поверх логического тома. Для этого введите
+
+mkfs.ext4 /dev/vgdata/lvdata
+
+![17](image/17.png)
+
+## Чтобы создать папку, на которую можно смонтировать том, введите
+
+mkdir -p /mnt/data
+
+![18](image/18.png)
+
+## Добавьте следующую строку в /etc/fstab:
+
+/dev/vgdata/lvdata /mnt/data ext4 defaults 1 2
+
+![19](image/19.png)
+
+## Проверьте, монтируется ли файловая система:
+
+mount -a
+mount | grep /mnt
+
+![20](image/20.png)
+
+# Изменение размера логических томов
+
+## В терминале с полномочиями администратора введите pvs и vgs, чтобы отобразить
+
+текущую конфигурацию физических томов и группы томов.
+
+![21](image/21.png)
+
+## С помощью fdisk добавьте раздел /dev/sdb2 размером 100 М. Задайте тип раздела 8e.
+
+![22](image/22.png)
+
+## Создайте физический том:
+
+pvcreate /dev/sdb2
+
+![23](image/23.png)
+
+## Расширьте vgdata:
+
+vgextend vgdata /dev/sdb2
+
+![24](image/24.png)
+
+## Проверьте, что размер доступной группы томов увеличен:
+
+vgs
+
+![25](image/25.png)
+
+## Проверьте текущий размер логического тома lvdata:
+
+lvs
+
+![26](image/26.png)
+
+## Проверьте текущий размер файловой системы на lvdata:
+
+df -h
+
+![27](image/27.png)
+
+## Увеличьте lvdata на 50% оставшегося доступного дискового пространства в группе томов:
+
+lvextend -r -l +50%FREE /dev/vgdata/lvdata
+
+![28](image/28.png)
+
+## Убедитесь, что добавленное дисковое пространство стало доступным:
+
+lvs
+df -h
+
+![29](image/29.png)
+
+## Уменьшите размер lvdata на 50 МБ:
+
+lvreduce -r -L -50M /dev/vgdata/lvdata
+Обратите внимание, что при этом том временно размонтируется.
+
+![30](image/30.png)
+
+## Убедитесь в успешном изменении дискового пространства:
+
+lvs
+df -h
+
+![31](image/31.png)
+
+# Самостоятельная работа
+
+## Создайте логический том lvgroup размером 200 МБ. Отформатируйте его в файловой системе XFS и cмонтируйте его постоянно на /mnt/groups. Перезагрузите виртуальную машину, чтобы убедиться, что устройство подключается.
+
+![32](image/32.png)
+
+##
+
+![33](image/33.png)
+
+##
+
+![34](image/34.png)
+
+##
+
+![35](image/35.png)
+
+## После перезагрузки добавьте ещё 150 МБ к тому lvgroup. Убедитесь, что размер файловой системы также изменится при изменении размера тома.
+
+![36](image/36.png)
+
+## Убедитесь, что расширение тома выполнено успешно.
+
+![37](image/37.png)
+
+## Выводы
+
+Я получил навыки управления логическими томами.
