--- a/labs/lab15/report/os2--lab15--report.qmd
+++ b/labs/lab15/report/os2--lab15--report.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,8 +14,8 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа № 15"
+subtitle: "Управление логическими томами"
 license: "CC BY"
 ## Generic options
 lang: ru-RU
@@ -34,7 +34,7 @@ bibliography:
 csl: _resources/csl/gost-r-7-0-5-2008-numeric.csl
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   pdf:
     toc: true
     number-sections: true
@@ -42,22 +42,22 @@ format:
     toc-depth: 2
     lof: true # List of figures
     lot: true # List of tables
-#### Document
+    #### Document
     documentclass: scrreprt
     papersize: a4
     fontsize: 12pt
     linestretch: 1.5
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-#### Biblatex
+    #### Biblatex
     cite-method: biblatex
     biblio-style: gost-numeric
     biblatexoptions:
       - backend=biber
       - langhook=extras
       - autolang=other*
-#### Misc options
+    #### Misc options
     csquotes: true
     indent: true
     header-includes: |
@@ -65,7 +65,7 @@ format:
       \usepackage{float}
       \floatplacement{figure}{H}
       \usepackage[math,RM={Scale=0.94},SS={Scale=0.94},SScon={Scale=0.94},TT={Scale=MatchLowercase,FakeStretch=0.9},DefaultFeatures={Ligatures=Common}]{plex-otf}
-### Docx output format
+  ### Docx output format
   docx:
     toc: true
     number-sections: true
@@ -74,44 +74,285 @@ format:
 
 # Цель работы
 
-Здесь приводится формулировка цели лабораторной работы. Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.  Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Получить навыки управления логическими томами.
 
 # Задание
 
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
-
-# Теоретическое введение
-
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
-
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+1. Продемонстрировать навыки создания физических томов на LVM (см. раздел 15.4.1).
+2. Продемонстрировать навыки создания группы томов и логических томов на LVM (см.
+   раздел 15.4.2).
+3. Продемонстрировать навыки изменения размера логических томов на LVM (см. раздел 15.4.3).
+4. Выполнить задание для самостоятельной работы (см. раздел 15.5)
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## Создание физического тома
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+1. В терминале с полномочиями администратора в файле /etc/fstab удалите (или
+   закомментируйте) строки автомонтирования /mnt/data и /mnt/data-ext.
+
+   ![1](image/1.png)
+
+2. Отмонтируйте /mnt/data и /mnt/data-ext:
+   umount /mnt/data
+   umount /mnt/data-ext
+
+   ![2](image/2.png)
+
+3. С помощью команды mount без параметров убедитесь, что диски /dev/sdb
+   и /dev/sdc не подмонтированы.
+
+   ![3](image/3.png)
+
+4. С помощью fdisk сделайте новую разметку для /dev/sdb и /dev/sdc, удалив ранее
+   созданные партиции:
+
+   - В терминале с полномочиями администратора введите fdisk /dev/sdb.
+
+   - Введите p для просмотра текущей разметки дискового пространства. Затем
+     для удаления всех имеющихся партиций на диске достаточно создать новую
+     пустую таблицу DOS-партиции, используя команду o . Убедитесь, что партиции
+     удалены, введя p . Сохраните изменения, введя w .
+
+   ![4](image/4.png)
+
+   ![5](image/5.png)
+
+5. Запишите изменения в таблицу разделов ядра:
+   partprobe /dev/sdb
+
+   ![6](image/6.png)
+
+6. Просмотрите информацию о разделах:
+   cat /proc/partitions
+   fdisk --list /dev/sdb
+
+   ![7](image/7.png)
+
+Вместо использования существующих дополнительных дисков можно добавить
+в VirtualBox к вашей виртуальной машине ещё один диск размером 512 MiB.
+Итак, предположим в вашей виртуальной машине добавлен диск /dev/sdb.
+
+1.  В терминале с полномочиями администратора с помощью fdisk создайте основной
+    раздел с типом LVM:
+
+- Введите
+  fdisk /dev/sdb
+- Введите n , чтобы создать новый раздел. Выберите p , чтобы сделать его
+  основным разделом, и используйте номер раздела, который предлагается по
+  умолчанию. Если вы используете чистое устройство, это будет номер раздела 1.
+- Нажмите Enter при запросе для первого сектора и введите +100M, чтобы выбрать
+  последний сектор.
+- Вернувшись в приглашение fdisk, введите t , чтобы изменить тип раздела.
+  Поскольку существует только один раздел, fdisk не спрашивает, какой раздел
+  использовать.
+- Программа запрашивает тип раздела, который вы хотите использовать. Выберите
+  8е. Затем нажмите w , чтобы записать изменения на диск и выйти из fdisk.
+
+  ![8](image/8.png)
+
+2.  Чтобы обновить таблицу разделов, введите
+    partprobe /dev/sdb
+
+    ![9](image/9.png)
+
+3.  Теперь, когда раздел был создан, вы должны указать его как физический том LVM. Для
+    этого введите (с учётом наименования дисков в вашей системе):
+    pvcreate /dev/sdb1
+
+    ![10](image/10.png)
+
+4.  Теперь введите pvs, чтобы убедиться, что физический том создан успешно. Обратите
+    внимание, что в этом списке уже существует другой физический том, так как RHEL по
+    умолчанию использует LVM для организации хранилища.
+
+    ![11](image/11.png)
+
+## Создание группы томов и логических томов
+
+1. В терминале с полномочиями администратора проверьте доступность физических
+   томов в вашей системе:
+   pvs
+   Вы должны увидеть созданный вами физический том /dev/sdb1.
+
+   ![12](image/12.png)
+
+2. Создайте группу томов с присвоенным ей физическим томом:
+   vgcreate vgdata /dev/sdb1
+
+   ![13](image/13.png)
+
+3. Убедитесь, что группа томов была создана успешно:
+   vgs
+   Затем введите
+   pvs
+   Обратите внимание, что теперь эта команда показывает имя физических томов с именами групп томов, которым они назначены.
+
+   ![14](image/14.png)
+
+4. Введите
+   lvcreate -n lvdata -l 50%FREE vgdata
+   Это создаст логический том LVM с именем lvdata, который будет использовать 50%
+   доступного дискового пространства в группе томов vgdata.
+
+   ![15](image/15.png)
+
+5. Для проверки успешного добавления тома введите
+   lvs
+
+   ![16](image/16.png)
+
+6. На этом этапе вы готовы создать файловую систему поверх логического тома. Для этого введите
+   mkfs.ext4 /dev/vgdata/lvdata
+
+   ![17](image/17.png)
+
+7. Чтобы создать папку, на которую можно смонтировать том, введите
+   mkdir -p /mnt/data
+
+   ![18](image/18.png)
+
+8. Добавьте следующую строку в /etc/fstab:
+   /dev/vgdata/lvdata /mnt/data ext4 defaults 1 2
+
+   ![19](image/19.png)
+
+9. Проверьте, монтируется ли файловая система:
+   mount -a
+   mount | grep /mnt
+
+   ![20](image/20.png)
+
+## Изменение размера логических томов
+
+1. В терминале с полномочиями администратора введите pvs и vgs, чтобы отобразить
+   текущую конфигурацию физических томов и группы томов.
+
+   ![21](image/21.png)
+
+2. С помощью fdisk добавьте раздел /dev/sdb2 размером 100 М. Задайте тип раздела
+   8e.
+
+   ![22](image/22.png)
+
+3. Создайте физический том:
+   pvcreate /dev/sdb2
+
+   ![23](image/23.png)
+
+4. Расширьте vgdata:
+   vgextend vgdata /dev/sdb2
+
+   ![24](image/24.png)
+
+5. Проверьте, что размер доступной группы томов увеличен:
+   vgs
+
+   ![25](image/25.png)
+
+6. Проверьте текущий размер логического тома lvdata:
+   lvs
+
+   ![26](image/26.png)
+
+7. Проверьте текущий размер файловой системы на lvdata:
+   df -h
+
+   ![27](image/27.png)
+
+8. Увеличьте lvdata на 50% оставшегося доступного дискового пространства в группе
+   томов:
+   lvextend -r -l +50%FREE /dev/vgdata/lvdata
+
+   ![28](image/28.png)
+
+9. Убедитесь, что добавленное дисковое пространство стало доступным:
+   lvs
+   df -h
+
+   ![29](image/29.png)
+
+10. Уменьшите размер lvdata на 50 МБ:
+    lvreduce -r -L -50M /dev/vgdata/lvdata
+    Обратите внимание, что при этом том временно размонтируется.
+
+    ![30](image/30.png)
+
+11. Убедитесь в успешном изменении дискового пространства:
+    lvs
+    df -h
+
+    ![31](image/31.png)
+
+## Самостоятельная работа
+
+1. Создайте логический том lvgroup размером 200 МБ. Отформатируйте его в файловой системе XFS и cмонтируйте его постоянно на /mnt/groups. Перезагрузите виртуальную машину, чтобы убедиться, что устройство подключается.
+
+   ![32](image/32.png)
+
+   ![33](image/33.png)
+
+   ![34](image/34.png)
+
+   ![35](image/35.png)
+
+2. После перезагрузки добавьте ещё 150 МБ к тому lvgroup. Убедитесь, что размер файловой системы также изменится при изменении размера тома.
+
+   ![36](image/36.png)
+
+3. Убедитесь, что расширение тома выполнено успешно.
+
+   ![37](image/37.png)
+
+# Контрольные вопросы
+
+1. Какой тип раздела используется в разделе GUID для работы с LVM?
+   Используется тип раздела Linux LVM (GUID-тип LVM).
+
+2. Какой командой можно создать группу томов с именем `vggroup`, которая содержит физическое устройство `/dev/sdb3` и использует физический экстент 4 MiB?
+
+   vgcreate -s 4M vggroup /dev/sdb3
+
+3. Какая команда показывает краткую сводку физических томов в вашей системе, а также группу томов, к которой они принадлежат?
+
+   pvs
+
+4. Что вам нужно сделать, чтобы добавить весь жёсткий диск `/dev/sdd` в группу томов группы?
+
+   1. Создать физический том:
+
+   pvcreate /dev/sdd
+
+   2. Добавить его в группу томов:
+
+   vgextend <имя_группы> /dev/sdd
+
+5. Какая команда позволяет вам создать логический том `lvvol1` с размером 6 MiB?
+
+   lvcreate -n lvvol1 -L 6M <имя_группы>
+
+6. Какая команда позволяет вам добавить 100 МБ в логический том `lvvol1`, если предположить, что дисковое пространство доступно в группе томов?
+
+   lvextend -L +100M /dev/<vgname>/lvvol1
+
+7. Каков первый шаг, чтобы добавить ещё 200 МБ дискового пространства в логический том, если требуемое дисковое пространство недоступно в группе томов?
+   Первый шаг - добавить новый физический том в группу томов (создать PV и выполнить `vgextend`).
+
+8. Какую опцию нужно использовать с командой `lvextend`, чтобы также изменить размер файловой системы?
+   Опция:
+   -r
+
+9. Как посмотреть, какие логические тома доступны?
+
+   lvs
+
+10. Какую команду нужно использовать для проверки целостности файловой системы на `/dev/vgdata/lvdata`?
+    Для файловой системы ext4:
+    fsck /dev/vgdata/lvdata
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
+Я получил навыки управления логическими томами.
 
 # Список литературы{.unnumbered}
 
