--- a/labs/lab15/presentation/os2--lab15--presentation.qmd
+++ b/labs/lab15/presentation/os2--lab15--presentation.qmd
@@ -14,10 +14,10 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
+title: "Лабораторная работа № 15"
+subtitle: "Управление логическими томами"
 license: CC BY
-date: 1970-01-01
+date: 2025-12-13
 ## Generic options
 lang: ru-RU
 slide-level: 2
